[gd_scene load_steps=8 format=2]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://sprites/player/miroir.jpg" type="Texture" id=2]
[ext_resource path="res://sprites/player/monochrome_tilemap_packed.png" type="Texture" id=3]
[ext_resource path="res://sprites/effect/smoke spritesheet.png" type="Texture" id=4]
[ext_resource path="res://annimation/smoke.tres" type="Animation" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.21134, 3.92785 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.77625, 4.44166 )

[node name="player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
vframes = 10
hframes = 14
frame = 6

[node name="miroir" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 10
hframes = 14
frame = 7

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="jumtimer" type="Timer" parent="."]
wait_time = 0.2

[node name="smoke" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.04, 0.04 )
z_index = -1
texture = ExtResource( 4 )
hframes = 10
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="smoke"]
anims/smoke = ExtResource( 5 )

[node name="cursed timer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="jumtimer" to="." method="_on_jumtimer_timeout"]
[connection signal="timeout" from="cursed timer" to="." method="_on_cursed_timer_timeout"]
